添加mathjax数学公式支持

--- a/layout/_partial/after_footer.jade
+++ b/layout/_partial/after_footer.jade
@@ -46,3 +46,6 @@ if theme.local_search == true
 //-     e=d.getElementsByTagName(t)[0];s.async=1;s.src=u;e.parentNode.insertBefore(s,e);
 //-     })(window,document,'script','//s.swiftypecdn.com/install/v2/st.js','_st');
 //-     _st('install','#{theme.swiftype}','2.0.0');
+
+if page.mathjax == true
+  include mathjax
