--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -838,9 +838,9 @@ body
     vertical-align top
     text-align left
     .fa
-      margin-right .4em
+      margin-right 0
       &:before 
-        margin-right .2em
+        margin-right 0
 /* toc*/
 #toc
   li 
